src/styles/components/button.css
.btn {
  --primary-btn-bg: var(--dark-green);
  --primary-btn-text: var(--lightest-green);

  background-color: var(--btn-bg);
  border: 0;
  border-radius: calc(var(--base-br) * 0.2);
  color: var(--btn-text-color);
  font-family: inherit;
  font-size: calc(var(--base-fs) * 1.15);
  font-weight: var(--fw-medium);
  padding: calc(var(--base-padding) * 1.4) calc(var(--base-padding) * 2);
  transition: opacity 250ms ease;

  @supports selector(&:has(span)) {
    &:has(span) {
      align-items: center;
      display: flex;
      gap: calc(var(--base-gap) * 0.5);
    }
  }

  @supports not selector(&:has(span)) {
    align-items: center;
    display: flex;
    gap: calc(var(--base-gap) * 0.5);
  }

  > span {
    color: var(--btn-text-color);
    font-size: calc(var(--base-fs) * 1.15);
    font-weight: var(--fw-medium);

    &.material-icons {
      font-size: calc(var(--base-fs) * 1.4);
    }
  }

  @media (prefers-color-scheme: dark) {
    --primary-btn-bg: var(--light-green);
    --primary-btn-text: var(--dark-green);
  }
}

.btn:hover {
  cursor: pointer;
  opacity: 0.8;
}

.btn-primary {
  --btn-bg: var(--primary-btn-bg);
  --btn-text-color: var(--primary-btn-text);
}

